--- a/src/app/pages/others/help/help.page.html
+++ b/src/app/pages/others/help/help.page.html
@@ -38,7 +38,7 @@
               <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
             </span>
             <span class="padding-left-30 "> &nbsp;&nbsp;Final Diagnosis &
-              Medical Certificate Approval</span>
+              Med Cert Approval</span>
           </ion-toolbar>
         </div>
       </ion-header>
