--- a/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
+++ b/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
@@ -31,7 +31,11 @@
               style="width: 100vh; height: 60vh;">
             </pdf-viewer>
           </pinch-zoom>
-
+          <ion-item lines="none">
+            <ion-text *ngIf="isPDFLoading">Disclaimer: Discharge Date will be displayed once Discharge Notice is saved
+              in
+              HIS.</ion-text>
+          </ion-item>
           <ion-button id="trigger-button-certificate" style="display:none">Sign Document</ion-button>
           <!--ion-row>
             <ion-col>
