--- a/src/app/chh-web-components/professional-fee-summary-patient-info/professional-fee-summary-patient-info.component.html
+++ b/src/app/chh-web-components/professional-fee-summary-patient-info/professional-fee-summary-patient-info.component.html
@@ -32,6 +32,10 @@
       <ion-col size="5">Admission Date:</ion-col>
       <ion-col size="7">{{dateAdmitted}}</ion-col>
     </ion-row>
+
+
+
+
     <!--ion-row *ngIf="x.philhealth_membership =='M' || x.philhealth_membership == 'D'">
       <ion-col size="5">PhilHealth:</ion-col>
       <ion-col size="7" *ngIf="x.philhealth_membership =='M'">Member</ion-col>
@@ -40,6 +44,15 @@
     <ion-row *ngIf="x.insurance_hmo !=null">
       <ion-col size="5">Insurance:</ion-col>
       <ion-col size="7">{{x.insurance_hmo}}</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="5">Managed From:</ion-col>
+      <ion-col size="7">{{patientDetailfromApi_from}}</ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="5">Managed To:</ion-col>
+      <ion-col size="7">{{patientDetailfromApi_to}}</ion-col>
     </ion-row>
 
 
