--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -98,7 +98,7 @@
             <span style="font-size: 13px;"> Managed from &nbsp;&nbsp;:
               {{ patientDetailfromApi_from }}</span>
           </div>
-          <div class=" font-size12" style="font-size: 13px;">
+          <div class=" font-size12" style="font-size: 13px;" *ngIf="admission_status == 'DN'">
             <ion-icon name="calendar-outline" slot="start"></ion-icon>
             <span style="font-size: 13px;"> Managed to &nbsp;&nbsp;:
               {{ patientDetailfromApi_to }}</span>
