added managed days on exec

--- a/src/app/pages/executuve/pages/patient-detail/patient-detail.page.html
+++ b/src/app/pages/executuve/pages/patient-detail/patient-detail.page.html
@@ -18,7 +18,9 @@
 <ion-content>
 
   <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [dischargeNotice]="dischargeNotice"
-    [forMoreOrLess]="true" [is_pwd]="is_pwd" [is_senior]="is_senior">
+    [forMoreOrLess]="true" [is_pwd]="is_pwd" [is_senior]="is_senior"
+    [patientDetailfromApi_from]="patientDetailfromApi_from" [patientDetailfromApi_to]="patientDetailfromApi_to"
+    [admission_status]="admission_status">
   </app-chh-app-patient-header>
 
 
