test progress notes

--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -77,7 +77,7 @@ ___  ___        _      _  _
   </app-chh-app-admitting-diagnosis>
 
 
-  <!--resi-progress-notes></resi-progress-notes-->
+  <resi-progress-notes></resi-progress-notes>
   <!-- progress notes -->
   <!--ion-card mode="ios" *ngIf="progNot_account_no != ''">
     <ion-list>
