--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
@@ -48,7 +48,8 @@
               <ion-button slot="end" color="warning" (click)="presentAlert()"
                 *ngIf="isApproved !='1' && summary_status =='FA'">Approve?
               </ion-button>
-              <ion-button slot="end" *ngIf="isApproved =='1'">Approved
+
+              <ion-button slot="end" *ngIf="isApproved !='1' && summary_status =='AC'">Approved
               </ion-button>
             </ion-item>
 
