--- a/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
@@ -32,11 +32,14 @@
             <ion-card class="pointer" (click)="gotoPerday(x.event_date,x.day)" *ngIf="!progressNotesIsNotReady">
               <ion-item>
                 Day #<b>{{x.day}} | {{x.dateCreateConverted}}</b>
+
+                <span *ngIf="x.date_approved != null">&nbsp;|&nbsp;</span>
+                <ion-badge *ngIf="x.date_approved != null" style="font-size:10px">{{x.date_approved}}</ion-badge>
               </ion-item>
               <ion-card-content>
                 <ion-grid class="ion-no-padding ion-no-margin">
                   <ion-row>
-                    <ion-col size-md="2" size-xs="4" *ngFor="let y of x.resi_notes">
+                    <ion-col size-md="2" size-xs="6" *ngFor="let y of x.resi_notes">
                       <p class="fontSize-12">{{y.resi_code}} <ion-icon name="checkmark-circle-outline"
                           class="icon-center" style="padding-bottom:2px" *ngIf="y.number_of_notes >= 1">
                         </ion-icon>
