--- a/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
@@ -40,7 +40,7 @@
                 <ion-grid class="ion-no-padding ion-no-margin">
                   <ion-row>
                     <ion-col size-md="2" size-xs="6" *ngFor="let y of x.resi_notes">
-                      <p class="fontSize-12">{{y.resi_code}} <ion-icon name="checkmark-circle-outline"
+                      <p class="fontSize-12">{{y.resi_name}} <ion-icon name="checkmark-circle-outline"
                           class="icon-center" style="padding-bottom:2px" *ngIf="y.number_of_notes >= 1">
                         </ion-icon>
                       </p>
