--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
@@ -11,7 +11,7 @@
     <ion-row class="">
       <ion-col size-md="10" offset-md="1" size-lg="4" offset-lg="4" class="ion-no-border">
         <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [dischargeNotice]="dischargeNotice"
-          [forMoreOrLess]="true" [is_pwd]="is_pwd" [is_senior]="is_senior"
+          [forMoreOrLess]="false" [is_pwd]="is_pwd" [is_senior]="is_senior"
           [is_philhealth_membership]="is_philhealth_membership">
         </app-chh-app-patient-header>
 
