--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -310,7 +310,7 @@ ______          _    _
         <app-chh-app-admitting-diagnosis [admittingDiagnosis]="admittingDiagnosis"
           [admittingDiagnosis1]="admittingDiagnosis1" [admittingDiagnosis2]="admittingDiagnosis2"
           [truncating1]="truncating1"></app-chh-app-admitting-diagnosis>
-        <!--resi-progress-notes></resi-progress-notes-->
+        <resi-progress-notes></resi-progress-notes>
 
         <app-chh-app-final-diagnosis [data]="admissionstatus" [finalDiagnosis]="finalDiagnosis" [limit]="limit"
           [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2"
