--- a/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
+++ b/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
@@ -40,7 +40,7 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-<ion-footer>
+<ion-footer *ngIf="summary_status != 'RA'">
   <ion-toolbar>
     <ion-grid>
       <ion-row>
