removed analytics and added chat on resi

--- a/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
+++ b/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
@@ -23,7 +23,7 @@
             </ion-refresher-content>
           </ion-refresher>
           <ion-card *ngIf="isEmpty">
-            <ion-item lines="none">No update history.</ion-item>
+            <ion-item lines="none">No data.</ion-item>
           </ion-card>
           <ng-container>
             <div *ngFor="let x of progessNotes" class="groupList">
