added lab results

--- a/src/app/chh-web-components/patient-name/patient-name.component.html
+++ b/src/app/chh-web-components/patient-name/patient-name.component.html
@@ -37,6 +37,9 @@
                 <p color="primary"><b>Date Created : <strong>{{date}} {{time}}</strong></b></p>
               </ion-text>
               <ion-text color="mango">
+                <p color="primary"><b>Room No : <strong>{{room_no}}</strong></b></p>
+              </ion-text>
+              <ion-text color="mango">
                 <p color="primary"><b>Patient No : <strong>{{patient_no}}</strong></b></p>
               </ion-text>
               <ion-text color="mango">
