--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -319,6 +319,16 @@ ______          _    _
         <app-chh-app-admitting-diagnosis [admittingDiagnosis]="admittingDiagnosis"
           [admittingDiagnosis1]="admittingDiagnosis1" [admittingDiagnosis2]="admittingDiagnosis2"
           [truncating1]="truncating1"></app-chh-app-admitting-diagnosis>
+        <ion-card mode="ios">
+          <ion-list>
+            <ion-item style="padding-top: 10px;">
+              <div class="ion-text-wrap"><b>Diagnostic Results</b><br /></div>
+            </ion-item>
+            <ion-item class="pointHand" lines="none" (click)="gotoDiagnistic()">
+              View Results &nbsp;<ion-icon class="icon-center" name="open-outline"></ion-icon>
+            </ion-item>
+          </ion-list>
+        </ion-card>
         <resi-progress-notes></resi-progress-notes>
 
         <app-chh-app-final-diagnosis [data]="admissionstatus" [finalDiagnosis]="finalDiagnosis" [limit]="limit"
